crates/ty_python_semantic/resources/mdtest/snapshots/issubclass.md_-_Narrowing_for_`issub…_-_`classinfo`_is_an_in…_(7bb66a0f412caac1).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: issubclass.md - Narrowing for `issubclass` checks - `classinfo` is an invalid PEP-604 union of types
mdtest path: crates/ty_python_semantic/resources/mdtest/narrow/issubclass.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import Literal
 2 | 
 3 | def _(x: type[int | list | bytes]):
 4 |     # error: [invalid-argument-type]
 5 |     if issubclass(x, int | list[int]):
 6 |         reveal_type(x)  # revealed: type[int] | type[list[Unknown]] | type[bytes]
 7 |     # TODO: This should be an error
 8 |     elif isinstance(x, (list[int] | bytes, int)):
 9 |         reveal_type(x)  # revealed: type[int] | type[list[Unknown]] | type[bytes]
10 |     # TODO: This should be an error
11 |     elif isinstance(x, (int, str | Literal[42])):
12 |         reveal_type(x)  # revealed: type[int] | type[list[Unknown]] | type[bytes]
13 |     # TODO: This should be an error
14 |     elif isinstance(x, (int, (str, (bytes, memoryview | Literal[42])))):
15 |         reveal_type(x)  # revealed: type[int] | type[list[Unknown]] | type[bytes]
16 |     else:
17 |         reveal_type(x)  # revealed: type[int] | type[list[Unknown]] | type[bytes]
```

# Diagnostics

```
error[invalid-argument-type]: Invalid second argument to `issubclass`
 --> src/mdtest_snippet.py:5:8
  |
3 | def _(x: type[int | list | bytes]):
4 |     # error: [invalid-argument-type]
5 |     if issubclass(x, int | list[int]):
  |        ^^^^^^^^^^^^^^---------------^
  |                      |
  |                      This `UnionType` instance contains non-class elements
6 |         reveal_type(x)  # revealed: type[int] | type[list[Unknown]] | type[bytes]
7 |     # TODO: This should be an error
  |
info: A `UnionType` instance can only be used as the second argument to `issubclass` if all elements are class objects
info: Element `<class 'list[int]'>` in the union is not a class object
info: rule `invalid-argument-type` is enabled by default

```
